<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tamas.verovszki.kopapirollogyikspock.MainActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="10dp"
        android:id="@+id/Image_View_Your_Choice"
        android:background="@drawable/empty"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Your_Choice"
        android:layout_below="@id/Image_View_Your_Choice"
        android:text="@string/your_choice"
        android:visibility="invisible"
        android:textSize="28dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="10dp"
        android:id="@+id/Image_View_Computers_Choice"
        android:layout_below="@id/Text_View_Your_Choice"
        android:background="@drawable/empty"
        android:text="@string/computers_choice"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Computers_Choice"
        android:layout_below="@id/Image_View_Computers_Choice"
        android:text="@string/computers_choice"
        android:visibility="invisible"
        android:textSize="28dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:id="@+id/Linear_Layout_Empty_1"
        android:layout_below="@id/Text_View_Computers_Choice">
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Info_Line"
        android:layout_below="@id/Linear_Layout_Empty_1"
        android:text=" "
        android:textSize="22dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:id="@+id/Linear_Layout_Empty_2"
        android:layout_below="@id/Text_View_Info_Line">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linear_Layout_Empty_2"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/Button_Stone"
            android:text="@string/stone"
            android:textSize="10dp"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/Button_Paper"
            android:text="@string/paper"
            android:textSize="10dp"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/Button_Scissors"
            android:text="@string/scissors"
            android:textSize="10dp"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/Button_Lizard"
            android:text="@string/lizard"
            android:textSize="10dp"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/Button_Spock"
            android:text="@string/spock"
            android:textSize="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Copyright"
        android:text="@string/text_Copyright"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>
